@@ -8,21 +8,23 @@ License: LGPL-3
 Title: Automatic Differentiation of Multivariate Operations
 BugReports: https://github.com/shabbychef/madness/issues
 Description: An object that supports automatic differentiation
-    of matrix- and multidimensional-valued functions with 
-    respect to multidimensional independent variables. 
+    of matrix- and multidimensional-valued functions with
+    respect to multidimensional independent variables.
     Automatic differentiation is via 'forward accumulation'.
-Depends: 
+Depends:
     R (>= 3.0.2)
 Imports:
     matrixcalc,
     expm,
     methods
-Suggests: 
-    testthat, 
+Suggests:
+    testthat,
     knitr
 URL: https://github.com/shabbychef/madness
 Collate:
     'AllClass.r'
+    'utils.r'
+    'Ops.r'
     'bind.r'
     'blockrep.r'
     'coerce.r'
@@ -34,7 +36,6 @@ Collate:
     'matwise.r'
     'norm.r'
     'numderiv.r'
-    'Ops.r'
     'reshape.r'
     'solve.r'
     'sum.r'
@@ -42,6 +43,6 @@ Collate:
     'theta.r'
     'trace.r'
     'twomoments.r'
-    'utils.r'
     'vcov.r'
     'vec.r'
+RoxygenNote: 5.0.0
